--- a/report_data_semantics/main.tex
+++ b/report_data_semantics/main.tex
@@ -169,8 +169,8 @@ title=\lstname % show the filename of files included with \lstinputlisting; also
      {\large { Bruno Barbieri, Noemi Dalmasso, Gaia Federica Francesca Ferrara }}
 \end{center}
 
-The aim of this report is to display an analysis carried out on the IMDb dataset; the analysis has been conducted making use of data mining methodologies. 
-After the data understanding and preparation phase, clustering, classification, regression and pattern mining techniques have been applied.
+% The aim of this report is to display an analysis carried out on the IMDb dataset; the analysis has been conducted making use of data mining methodologies. 
+% After the data understanding and preparation phase, clustering, classification, regression and pattern mining techniques have been applied.
 
 % \vspace{2cm}
 
